plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web' // 기본
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'// DB 연동
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'//DB 연동
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'//타임리프
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'//JPA
	testImplementation 'org.springframework.security:spring-security-test'// JPA를 사용하여 객체와 데이터베이스 간의 매핑
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'// Thymeleaf 템플릿 엔진과 Spring Security의 통합
	implementation 'org.springframework.boot:spring-boot-starter-security' // springSecurity
	testImplementation 'org.springframework.security:spring-security-test'// springSecurity
	implementation("io.jsonwebtoken:jjwt-api:0.11.5") //JWT
	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")//JWT
	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")//JWT
	compileOnly 'org.projectlombok:lombok'//Lombok
	annotationProcessor 'org.projectlombok:lombok'//Lombok(자동생성)
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // 테스트 관련 의존성 (테스트 스타터)
	runtimeOnly 'com.mysql:mysql-connector-j' // MySQL 데이터베이스 연결
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'// 테스트 실행
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0' // 스웨거
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
	implementation 'software.amazon.awssdk:s3:2.25.19'
	implementation 'org.springframework.boot:spring-boot-starter-validation'


}

tasks.named('test') {
	useJUnitPlatform()
}
